# vkstart

./: .gitmodules  CMakeLists.txt  NOTICE  README.md  main.cpp  vulkan-hpp-sdl.cpp  vulkan-hpp-sdl.h
models/: CMakeLists.txt
shaders/: CMakeLists.txt  shader.slang
textures/: CMakeLists.txt
vkstart/: CMakeLists.txt  DebugMessenger.cpp  DebugMessenger.h  Engine.cpp  Engine.h  EngineCreation.cpp  EngineCreation.h  EngineCreationHelper.cpp  IWindow.h  QueueFamilyIndices.cpp  QueueFamilyIndices.h  SDL3IWindow.cpp  SDL3IWindow.h  SDL3Window.cpp  SDL3Window.h  ValidationLayers.cpp  ValidationLayers.h  Vertex.cpp  Vertex.h  stdafx.h  vkstart.h
